--- a/index.html
+++ b/index.html
@@ -98,64 +98,72 @@
     <!-- --------------------- slider end ------------------- -->
 
     <!-- --------------------- event page start ------------------- -->
-    <section>
-      <p class="course-title">Event</p>
-      <div class="event">
-        <section class="le">
-          <p class="title">TEDx</p>
-          <p class="msg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex nihil rerum itaque quisquam!
-          </p>
+    <div>
 
-        </section>
+      <section>
+        <p class="course-title">Event</p>
+        <div class="event">
+          <section class="main">
+            <section class="left">
+              <p class="title">TEDxECE </p>
+              <p class="msg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex nihil rerum itaque quisquam!
+                Natus repudiandae nesciunt tempora odio amet. Saepe?</p>
+              <button class="cta">Learn More</button>
+            </section>
 
-        <div class="image-gallery">
-          <img src="https://demo.sirv.com/chair.jpg?hue=-100 " alt="">
+            <section class="right">
+              <img src="https://demo.sirv.com/chair.jpg?hue=-100 " alt="Langing image">
+            </section>
+
+          </section>
+          <ul class="thumbnails">
+            <li>
+              <a href="https://demo.sirv.com/chair.jpg?hue=-100  "><img src="https://demo.sirv.com/chair.jpg?hue=-100  "
+                  alt="">
+              </a>
+            </li>
+            <li><a href="https://demo.sirv.com/chair.jpg?hue=-44 "><img src="https://demo.sirv.com/chair.jpg?hue=-44 "
+                  alt=""></a>
+
+            </li>
+            <li><a href="https://demo.sirv.com/chair.jpg?hue=0"><img src="https://demo.sirv.com/chair.jpg?hue=0"
+                  alt=""></a>
+
+            </li>
+            <li><a href="https://demo.sirv.com/chair.jpg?hue=11"><img src="https://demo.sirv.com/chair.jpg?hue=11"
+                  alt=""></a></li>
+          </ul>
         </div>
-        <ul class="thumbnails">
-          <li>
-            <a href="https://demo.sirv.com/chair.jpg?hue=-100  "><img src="https://demo.sirv.com/chair.jpg?hue=-100  "
-                alt="">
-            </a>
-          </li>
-          <li><a href="https://demo.sirv.com/chair.jpg?hue=-44 "><img src="https://demo.sirv.com/chair.jpg?hue=-44 "
-                alt=""></a>
-
-          </li>
-          <li><a href="https://demo.sirv.com/chair.jpg?hue=0"><img src="https://demo.sirv.com/chair.jpg?hue=0"
-                alt=""></a>
-
-          </li>
-          <li><a href="https://demo.sirv.com/chair.jpg?hue=11"><img src="https://demo.sirv.com/chair.jpg?hue=11"
-                alt=""></a></li>
-        </ul>
-      </div>
-    </section>
+      </section>
+    </div>
 
     <!-- --------------------- event page end ------------------- -->
 
     <!-- --------------------- oppoortunity start ------------------- -->
+    <div>
 
-    <section class="job" id="job">
-      <div class="about-right">
-        <h2>Job/Internship</h2>
-        <h1>Hunt<span>!</span></h1>
-        <div class="about-btns">
-          <button type="button" class="btn btn-pink">Apply</button>
-          <button type="button" class="btn btn-white">Subscribe</button>
-        </div>
-        <div class="container1">
-          <div class="intro">
-            <div class="profile-area">
-              <div class="outer-circle">
-                <span class="material-symbols-outlined"> design_services </span>
-                <span class="material-symbols-outlined"> dns </span>
-                <span class="material-symbols-outlined"> code </span>
-                <span class="material-symbols-outlined"> cloud </span>
+      <section class="job" id="job">
+        <div class="about-right">
+          <h2>Job/Internship</h2>
+          <h1>Hunt<span>!</span></h1>
+          <div class="about-btns">
+            <button type="button" class="btn btn-pink">Apply</button>
+            <button type="button" class="btn btn-white">Subscribe</button>
+          </div>
+          <div class="container1">
+            <div class="intro">
+              <div class="profile-area">
+                <div class="outer-circle">
+                  <span class="material-symbols-outlined"> design_services </span>
+                  <span class="material-symbols-outlined"> dns </span>
+                  <span class="material-symbols-outlined"> code </span>
+                  <span class="material-symbols-outlined"> cloud </span>
+                </div>
+                <div class="inner-circle">
+                  <img src="im.jpg">
+                </div>
               </div>
-              <div class="inner-circle">
-                <img src="im.jpg">
-              </div>
-            </div>
-    </section>
+      </section>
+    </div>
   </main>
   <!-- --------------------- opportunity end ------------------- -->
